hint() is not respected in find()

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Triage update:

      Under 2.4.8, the planner generates a single indexed solution when a hint is provided.
      Under 2.5.4, a collection scan is generated in addition to the indexed solution. It's possible for the collection scan to be ranked higher than the indexed solution, resulting in the hinted solution being ignored.

      ------

      mongo --shell test.js
      > use dummy
      switched to db dummy
      > doit()
      BasicCursor
      

      Expected to see "BtreeCursor ace.val_1 multi" output.

        1. test.js
          0.3 kB
        2. server12056.js
          1 kB
        3. server12056.js
          1 kB

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Alexander Komyagin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: