SERVER-12056 query planner should generate at least one indexed solution when a hint is provided.